# ProjetS8

./: .gitignore  CMakeLists.txt  readme.md
Solver/: .gitignore
Solver/lib/: OpenXLSX.lib
Solver/src/: geography.h  geomap.h  geometry.h  geoserializer.cpp  geoserializer.h  main.cpp  path.h  station.h
Solver/src/breitling/: BreitlingSolver.cpp  BreitlingSolver.h  label_setting_breitling.h
Solver/src/geoserializer/: csvserializer.cpp  csvserializer.h  xlsserializer.cpp  xlsserializer.h
Solver/src/tsp/: TspSolver.cpp  TspSolver.h  genetictsp.cpp  genetictsp.h
Tests/: test.cpp
doc/: pl.txt  uml.asta
src/: geography.h  geometry.h  main.cpp  path.cpp  path.h  pathsolver.h  station.h  userinterface.h
